martian-derive/tests/ui_martian_type/derive_on_empty_enum.stderr
error: MartianType cannot be derived on enums with no variants. They are most likely not useful as a MartianType.
 --> $DIR/derive_on_empty_enum.rs:4:1
  |
4 | enum Foo {}
  | ^^^^^^^^^^^
