martian-derive/tests/ui_martian_type/derive_on_empty_enum.rs
use martian_derive::MartianType;

#[derive(MartianType)]
enum Foo {}

fn main() {}
